# HomeManagementSystem

server/: .example.env  .gitignore  example.env  manage.py  pyproject.toml  pytest.ini
server/authentication/: authentication.py  models.py  serializers.py  services.py  tests.py  views.py
server/authentication/migrations/: 0001_initial.py
server/door_lock/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/door_lock/migrations/: 0001_initial.py  0002_remove_doorlock_password.py
server/journal/: views.py
server/journal/migrations/: 0002_alter_journal_date_alter_journalimage_journal_and_more.py
server/portfolio/: apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
server/portfolio/templates/portfolio/: contact_email.html
server/server/: celery.py  settings.py  urls.py
server/todo_list/: admin.py  models.py  serializers.py  urls.py  views.py
server/todo_list/migrations/: 0001_initial.py
server/utils/Response/: CustomResponse.py
